--- a/android/CallMyGranny/app/src/main/AndroidManifest.xml
+++ b/android/CallMyGranny/app/src/main/AndroidManifest.xml
@@ -5,16 +5,21 @@
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
+            android:name=".AndroidApp"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.ContactsActivity" />
+        <activity android:name=".ui.SyncActivity" />
+
     </application>
 
 </manifest>
