--- a/android/CallMyGranny/app/build.gradle
+++ b/android/CallMyGranny/app/build.gradle
@@ -32,9 +32,8 @@ dependencies {
     // Paper DB
     implementation 'io.paperdb:paperdb:2.6'
 
-    // BluetoothSPP
-    // https://github.com/akexorcist/Android-BluetoothSPPLibrary
-    implementation 'com.akexorcist:bluetoothspp:1.0.0'
+    // https://github.com/douglasjunior/AndroidBluetoothLibrary
+    implementation 'com.github.douglasjunior.AndroidBluetoothLibrary:BluetoothClassicLibrary:0.3.5'
 
     testImplementation 'junit:junit:4.12'
 }
