--- a/android/CallMyGranny/app/build.gradle
+++ b/android/CallMyGranny/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    implementation 'org.apache.commons:commons-lang3:3.6'
+
     // Paper DB
     implementation 'io.paperdb:paperdb:2.6'
 
