--- a/android/CallMyGranny/app/build.gradle
+++ b/android/CallMyGranny/app/build.gradle
@@ -40,5 +40,9 @@ dependencies {
     // https://github.com/MacroYau/Blue2Serial
     implementation 'com.macroyau:blue2serial:0.1.5'
 
+    // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
+
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:2.21.0'
 }
